tests/syntax/bad/170_import_nonliteral.grace
import ("hello" ++ "world") as x
